--- a/config/application.yml
+++ b/config/application.yml
@@ -7,8 +7,8 @@
 # makes 'Your_Gmail_Username' available as ENV["GMAIL_USERNAME"]
 # Add application configuration variables here, as shown below.
 #
-GMAIL_USERNAME: Your_Username
-GMAIL_PASSWORD: Your_Password
+GMAIL_USERNAME: sunil.kumar1313@gmail.com
+GMAIL_PASSWORD: rubydeveloper
 STRIPE_API_KEY: sk_test_tAFkewskRmAqNjiIF4WZRVOG
 STRIPE_PUBLIC_KEY: pk_test_OI0JTbtFkVDtaZJvTbyhb6lg
 ADMIN_NAME: user1
